fix(adjust styles in login, PDP, and product summary)

--- a/store/blocks/desktop/components/home/header/main-mega-menu.jsonc
+++ b/store/blocks/desktop/components/home/header/main-mega-menu.jsonc
@@ -21,7 +21,8 @@
     "title": "components mega menu desktop",
     "props": {
       "openOnly": "horizontal",
-      "blockClass": "components-mega-menu"
+      "blockClass": "components-mega-menu",
+      "title": "All categories"
     }
   },
   "flex-layout.col#trigger-mega-menu": {
