--- a/store/blocks/desktop/components/home/header/main_header.jsonc
+++ b/store/blocks/desktop/components/home/header/main_header.jsonc
@@ -54,7 +54,7 @@
       "menu-item#cyber-day",
       "menu-item#never-say-never",
       "minicart.v2",
-      "login#header-desktop"
+      "login#global"
     ]
   },
   // "drawer#desktop": {
