--- a/store/blocks/global/components/shelf_products/product-highlight.jsonc
+++ b/store/blocks/global/components/shelf_products/product-highlight.jsonc
@@ -1,7 +1,17 @@
 {
   "vtex.product-highlights@2.x:product-highlights": {
     "title": "Free Shipping Highlight",
-    "children": ["product-highlight-wrapper"]
+    "children": ["product-highlight-wrapper"],
+    "props": {
+      "filter": {
+        "highlightNames": [
+          "Envío Gratis"
+        ],
+      "type": "show"
+      }
+   
+
+    }
   },
   "product-highlight-wrapper": {
     "title": "Wrapper for Highlight Components",
