fix(add styles to PDP highlights, PLP show more button, and update PDP and minicart summary styles) Styled highlights section on the PDP (Product Detail Page),  Added and styled show more button on the PLP (Product Listing Page), Updated styles for the PDP and minicart, specifically in the purchase summary section

--- a/store/blocks/global/components/minicart/minicart.jsonc
+++ b/store/blocks/global/components/minicart/minicart.jsonc
@@ -73,7 +73,7 @@
   },
   "flex-layout.col#minicart-footer": {
     "title": "Minicart Footer Column",
-    "children": ["minicart-summary", "minicart-checkout-button"],
+    "children": ["minicart-summary#container--totalizers", "minicart-checkout-button"],
     "props": {
       "blockClass": "minicart-footer-column"
     }
@@ -98,7 +98,7 @@
     "blocks": ["product-list-content-mobile"]
   },
 
-  "minicart-summary": {
+  "minicart-summary#container--totalizers": {
     "title": "Minicart Summary",
     "blocks": ["checkout-summary.compact#minicart"],
     "props": {
