feat: style login for all sign-in options as per Figma, add post-login menu with routes, style PDP image and product description

--- a/store/blocks/desktop/components/home/plp/plp.jsonc
+++ b/store/blocks/desktop/components/home/plp/plp.jsonc
@@ -38,7 +38,7 @@
 
   "flex-layout.col#sort__options": {
     "title": "Sort Options column",
-    "children": ["order-by.v2"],
+    "children": ["order-by.v2", "gallery-layout-switcher"],
     "props": {
       "blockClass": "sort__options"
     }
@@ -67,7 +67,6 @@
   "flex-layout.col#product__gallery": {
     "title": "Product Gallery Column",
     "children": [
-      "gallery-layout-switcher",
       "search-content#plp",
       "search-products-count-per-page",
       "search-fetch-more"
