--- a/store/blocks/global/components/plp/summary_shelf_gallery.jsonc
+++ b/store/blocks/global/components/plp/summary_shelf_gallery.jsonc
@@ -13,7 +13,8 @@
         "flex-layout.col#shelf__details--gallery"
       ],
       "props": {
-        "blockClass": "shelf__content--gallery"
+        "blockClass": "shelf__content--gallery",
+        "colSizing": "auto"
       }
     },
     "flex-layout.col#shelf__image--gallery": {
