style: update styles for minicart delete icon and login back icon, rename components for better clarity

--- a/store/blocks/desktop/components/home/header/main-header-icon.jsonc
+++ b/store/blocks/desktop/components/home/header/main-header-icon.jsonc
@@ -2,7 +2,7 @@
     "flex-layout.row#desktop_main-header-icons": {
         "title": "container menu header icons",
         "children": [
-            "header-row#menu-icon"
+            "header-row#global__menu-icon"
         ]
     }
 }
