--- a/store/blocks/desktop/components/home/info_card/main_slider-info-card.jsonc
+++ b/store/blocks/desktop/components/home/info_card/main_slider-info-card.jsonc
@@ -2,7 +2,7 @@
     "flex-layout.row#desktop-slider-info-card": {
         "title": "container info card desktop",
         "children": [
-            "flex-layout.row#home--slider"
+            "flex-layout.row#global__home--slider"
         ]
     }
 }
