--- a/store/blocks/mobile/components/home/header/main_header-menu-icons.jsonc
+++ b/store/blocks/mobile/components/home/header/main_header-menu-icons.jsonc
@@ -1,6 +1,6 @@
 {
   "flex-layout.row#phone_header-menu-icons": {
     "title": "container menu icons phone",
-    "children": ["header-row#menu-icon"]
+    "children": ["header-row#global__menu-icon"]
   }
 }
