--- a/store/blocks/desktop/components/home/rich_text/main_rich-text.jsonc
+++ b/store/blocks/desktop/components/home/rich_text/main_rich-text.jsonc
@@ -1,6 +1,6 @@
 {
-  "rich-text#title-section-one-desktop": {
-    "title": "texto section one",
+  "rich-text#desktop__title-section-one": {
+    "title": "texto section one desktop",
     "props": {
       "text": "An amazing product  DESKTOP",
       "textAlignment": "LEFT",
@@ -9,8 +9,8 @@
       "blockClass": ["texto-section-one-desktop"]
     }
   },
-  "rich-text#title-section-two-desktop": {
-    "title": "text section two",
+  "rich-text#desktop__title-section-two": {
+    "title": "text section two desktop",
     "props": {
       "text": "An amazing product",
       "textAlignment": "LEFT",
@@ -19,8 +19,8 @@
       "blockClass": ["texto-section-two-desktop"]
     }
   },
-  "rich-text#title-section-three-desktop": {
-    "title": "text section two",
+  "rich-text#desktop__title-section-three": {
+    "title": "text section three desktop",
     "props": {
       "text": "An amazing product",
       "textAlignment": "LEFT",
