--- a/store/blocks/desktop/screen/footer.jsonc
+++ b/store/blocks/desktop/screen/footer.jsonc
@@ -1,6 +1,6 @@
 {
   // "footer-layout.desktop": {
   //   "title": "desktop footer",
-  //   "children": ["flex-layout.row#footer-desktop"]
+  //   "children": ["flex-layout.row#desktop__footer"]
   // }
 }
